# repair_ros_robot

./: .gitmodules  CMakeLists.txt  README.md  dummy_guide.md  requirements.txt
ec_msgs/: CMakeLists.txt  package.xml
ec_msgs/msg/: CmdStatus.msg  FtPDO.msg  HandStatus.msg  ImuPDO.msg  MotorPDO.msg  PowPDO.msg  SlaveCmdInfo.msg  SlaveDescription.msg  SlaveInfo.msg
ec_msgs/srv/: GetMeasurements.srv
realsense_description_l515/: CMakeLists.txt  package.xml
realsense_gazebo_plugin_l515/: CMakeLists.txt  package.xml
repair_cartesio/: CMakeLists.txt  package.xml
repair_cartesio/config/: repair_simple.yaml
repair_cartesio/launch/: repair.launch  repair_arm.launch
repair_cartesio/rviz/: repair_cartesio.rviz
repair_cntrl/: CMakeLists.txt  package.xml
repair_cntrl/config/: repair_basic.yaml  rt_traj_replayer.yaml  setup.bash
repair_cntrl/config/hal/: repair_dummy.yaml  repair_gz.yaml
repair_ecat/: ecat_config.yaml  ecat_master.bash
repair_gazebo/: CMakeLists.txt  package.xml
repair_gazebo/config/: controllers.yaml  gazebo_controller.yaml
repair_gazebo/launch/: bringup_moveit.launch  bringup_moveit_multi.launch  control_utils.launch  repair_3_frescos.launch  repair_gazebo.launch
repair_gazebo/worlds/: repair.world
repair_gazebo/worlds/materials/scripts/: textures.material
repair_interface/: CMakeLists.txt  README.md  package.xml  setup.py
repair_interface/include/repair_interface/: dawnik_bridge_node.h  moveit_client.h  moveit_xbot_birdge.h  repair_interface_node.h
repair_interface/launch/: dawnik_bridge.launch  manual_test.launch  moveit_multi.launch  moveit_test.launch  moveit_xbot.launch  recognize_it_test.launch  repair_interface.launch  repair_moveit.launch  save_pcd_scene.launch
repair_interface/scripts/: .gitignore  HandCmd.msg  align_utils.py  angle_utils.py  dawnik_test.py  manipulation_utils.py  manual_test.py  motion_planner.py  motion_planner_dawnik.py  motion_planner_test.py  moveit_client.py  moveit_client_single.py  moveit_multi_fresco.py  moveit_multi_fresco_with_recognition.py  moveit_test.py  moveit_test_2.py  moveit_test_single_arm.py  parameters.py  point_cloud_filter.py  qb_pub_test.py  qbhand_new.py  qbhand_test.py  recognize_each_fragment_icp.py  recognize_fragments.py  save_pcd.py  traj_utils.py  transform_utils.py  try_wide.py  vision_utils.py  xbot_bridge.py
repair_interface/src/: dawnik_bridge_node.cpp  moveit_client.cpp  moveit_xbot_bridge.cpp  repair_interface_node.cpp
repair_interface/srv/: GetCurrentPose.srv  GripperCommand.srv  MoveArmToPose.srv  MoveBothArms.srv
repair_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
repair_moveit_config_v2/: .setup_assistant  (+2 more)
repair_moveit_config_v3/: .setup_assistant  CMakeLists.txt  package.xml
repair_moveit_config_v3/config/: gazebo_repair_full.urdf  joint_limits.yaml  ompl_planning.yaml  repair_full.srdf  ros_controllers.yaml  simple_moveit_controllers.yaml
repair_moveit_config_v3/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml  trajectory_execution.launch.xml
repair_moveit_xbot/: CMakeLists.txt  package.xml
repair_moveit_xbot/config/: controllers.yaml  simple_moveit_controllers.yaml
repair_moveit_xbot/launch/: bringup_moveit.launch
repair_moveit_xbot/src/: moveit_xbot_bridge.cpp
repair_srdf/: CMakeLists.txt  package.xml
repair_srdf/srdf/: generate_srdfs.sh  repair.srdf.xacro  repair_arm.srdf  repair_full.srdf  repair_full.srdf.xacro
repair_urdf/: CMakeLists.txt  package.xml
repair_urdf/config/: arm_coll.yaml  arm_opt_mount_vals.yaml  repair_arm.rviz  repair_full.rviz
repair_urdf/doc/: urdf jointlab-repair.docx
repair_urdf/launch/: repair_arm.launch  repair_cage.launch  repair_full.launch  repair_full_slider.launch
repair_urdf/meshes/: angle_flange_90_iso9404.stl  camera_supp_cover_sh1p2.stl  camera_supp_cover_wide.stl  camera_supp_cover_wide_left.stl  mesh_base.stl  mesh_elbow.stl  mesh_torso-yaw.stl  mesh_wrist-roll.stl
repair_urdf/meshes/base_meshes/: link_0.stl  link_1.stl  link_1_mirror.stl  link_2.stl  link_3.stl  link_5.stl  link_6.stl
repair_urdf/meshes/optimized/: hand_left.stl  link_0.stl  link_1.stl  link_1_mirror.stl  link_2.stl  link_3.stl  link_4.stl  link_5.stl  link_6.stl
repair_urdf/meshes/simplified/: mesh_base.stl  mesh_elbow.stl  mesh_forearm-yaw.stl  mesh_sh-pitch.stl  mesh_sh-roll.stl  mesh_sh-yaw.stl  mesh_torso-yaw.stl  mesh_wrist-pitch.stl  mesh_wrist-roll.stl
repair_urdf/sdf/frag/: model.config  model.sdf
repair_urdf/sdf/frag2/: model.config  model.sdf
repair_urdf/sdf/frag3/: model.config  model.sdf
repair_urdf/sdf/frag3/meshes/: frag_3.stl
repair_urdf/urdf/: _d435.gazebo.xacro  _d435.urdf.xacro  _l515.gazebo.xacro  _l515.urdf.xacro  _l515_usb_plug.urdf.xacro  common.gazebo.xacro  frag1.urdf  frag2.sdf  frag2.urdf  frag3.urdf  fragment_stance.urdf  generate_urdfs.bash  generate_urdfs.sh  inertial_properties.urdf.xacro  kinematics_properties.urdf.xacro  limits.urdf.xacro  materials.gazebo.xacro  materials.urdf.xacro  model.urdf  repair.transmission.xacro  repair_arm.urdf  repair_arm.urdf.xacro  repair_arm_coll.urdf.xacro  repair_arm_coll_params.urdf.xacro  repair_arm_collision.urdf.xacro  repair_arm_final.urdf.xacro  repair_arm_macro.urdf.xacro  repair_base.urdf.xacro  repair_cage.urdf.xacro  repair_cage_macro.urdf.xacro  repair_full.urdf  repair_full.urdf.xacro  repair_full_with_sliding_guide.urdf  repair_full_xbot.urdf  repair_hand_transmission.xacro  repair_opt_mount_params.urdf.xacro  repair_single_arm.urdf.xacro  repair_torso_coll.urdf.xacro  repair_torso_coll_params.urdf.xacro  repair_torso_macro.urdf.xacro  (+3 more)
repair_urdf/urdf/gazebo/: ignore_joint_softhand.xbot.xacro  xbot.gazebo.xacro
(+77 files in other folders)
